Refatorando código e melhorando interface.

--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Jura:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
-
 :root {
-  --bg: #1d3557;
-  --inputColor: #3969ac;
-  --buttonBg: #799ed2;
-  --dark: #2e3338;
-  --light: #f8f9fa;
+  --bg: #333533;
+  --title: #f5cb5c;
+  --inputColor: #e8eddf;
+  --buttonBg: #f5cb5c;
+  --buttonBgHover: #ffdf89;
+  --textButton: #252422;
+  --textContent: #e8eddf;
+  --placeholder: #e8eddf;
 }
 
 * {
@@ -18,6 +17,7 @@
 
 body {
   font-size: 1rem;
+  font-family: 'Inter', sans-serif;
   background-color: var(--bg);
   color: var(--light);
 }
@@ -25,100 +25,107 @@ body {
 main {
   width: 100vw;
   height: 100vh;
-
-  display: grid;
-  align-content: center;
-  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
   text-align: center;
+}
+
+header {
+  width: 100%;
+  height: 100px;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+  line-height: 2.25rem;
+  letter-spacing: 0.1rem;
+}
+
+h1 {
+  color: var(--title);
 }
 
 .container {
-  max-width: 940px;
-}
-
-.container .brand {
-  margin-bottom: 3rem;
-}
-
-.container .title h3 {
-  font-family: 'Jura', sans-serif;
-  font-size: 1.5rem;
-  font-weight: 700;
-  line-height: 2.25rem;
-  margin-bottom: 1.5rem;
-}
-
-.container .search {
-  display: flex;
+  display: flex ;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  gap: 50px;
 }
 
-.container .search input[type='text'] {
-  width: 15rem;
-  height: 3rem;
-  border-radius: 0.5rem;
-  border: none;
-  font-family: 'Roboto', sans-serif;
-  font-size: 1.5rem;
+.container .inputSearch {
+  display: grid;
+  gap: 16px;
+}
+
+.container .inputSearch input {
+  width: 12rem;
+  height: 2.5rem;
+  font-family: 'Inter', sans-serif;
+  font-size: 1rem;
   text-align: center;
-  background-color: var(--inputColor);
-  color: var(--light);
-  margin-bottom: 1.5rem;
-  outline: none;
-}
-
-.container .search button {
-  width: 21.25rem;
-  height: 4rem;
-  background-color: var(--buttonBg);
   border: none;
-  border-radius: 0.5rem;
-  cursor: pointer;
+  background-color: transparent;
+  border-radius: 4px;
   outline: none;
-  font-family: 'Poppins', sans-serif;
-  font-weight: 700;
-  font-size: 1.5rem;
-  color: var(--dark);
-  transition: 0.2s;
-  margin-bottom: 2rem;
+  margin-bottom: 16px;
+  color: var(--inputColor);
 }
 
-.container .search button:hover {
-  filter: brightness(0.9);
+.container .inputSearch input::placeholder {
+  color: var(--placeholder);
+}
+
+.container .inputSearch button {
+  width: 12rem;
+  height: 2.5rem;
+  font-family: 'Inter', sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  border: none;
+  border-radius: 4px;
+  background-color: var(--buttonBg);
+  color: var(--text);
+  cursor: pointer;
+  transition: 0.2s;
+}
+
+.container .inputSearch button:hover {
+  background-color: var(--buttonBgHover);
+  color: var(--text);
   transition: 0.2s;
 }
 
 .container .resultSearch {
   width: 38.75rem;
   height: 15.5rem;
-  background-color: var(--inputColor);
   border-radius: 0.5rem;
   border: none;
-  display: grid;
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   margin-bottom: 2rem;
+  color: var(--textContent);
 }
 
 .container .resultSearch p {
-  font-family: 'Roboto', sans-serif;
-  font-size: 1.25rem;
   font-weight: 700;
-  color: var(--light);
-}
-
-.container .resultSearch p span {
-  font-family: 'Roboto', sans-serif;
-  font-size: 1.25rem;
-  font-weight: 300;
-  text-align: center;
-  color: var(--light);
 }
 
 footer {
-  font-family: 'Jura', sans-serif;
-  display: grid;
-  align-items: flex-end;
+  width: 100%;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  font-weight: 400;
+  font-size: 0.75rem;
+  letter-spacing: 0.0625rem;
+  color: var(--title);
+}
+
+span {
+  font-weight: 400;
 }
